<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="und">\u2190</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="sign">+/-</string>
    <string name="sqt">\u221a</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="percent">%</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="mult">*</string>
    <string name="inv">Inv</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="minus">-</string>
    <string name="period">.</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
</resources>
